// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update "package.json" 1`] = `
Object {
  "commitlint": Object {
    "extends": Array [
      "@commitlint/config-conventional",
    ],
    "rules": Object {
      "body-max-line-length": Array [
        1,
        "always",
        100,
      ],
    },
  },
  "eslintConfig": Object {
    "extends": Array [
      "ybiquitous",
    ],
    "ignorePatterns": Array [
      "coverage",
      "dist",
      "tmp",
    ],
    "reportUnusedDisableDirectives": true,
    "root": true,
  },
  "lint-staged": Object {
    "!(*.snap)": "prettier --write",
    "!(CHANGELOG).md": "remark --frail",
    "*.css": "xyz",
    "*.{js,jsx,mjs,ts,tsx}": "eslint --fix",
  },
  "remarkConfig": Object {
    "plugins": Array [
      "remark-preset-ybiquitous",
    ],
  },
  "scripts": Object {
    "clean": "git clean -dx --force --exclude=node_modules --exclude=.husky",
    "format": "npm-run-all --print-label --parallel lint:*:fix prettier:write",
    "lint": "npm-run-all --print-label --parallel lint:* prettier:check",
    "lint:js": "eslint .",
    "lint:js:fix": "npm run lint:js -- --fix",
    "lint:md": "remark . --frail",
    "lint:md:fix": "remark . --output",
    "lint:types": "tsc --noEmit",
    "lint:types:watch": "npm run lint:types -- --watch",
    "prepare": "husky install",
    "prerelease": "git switch main && git pull && npm ci && npm run clean && npm test && npm run lint && npm run clean",
    "prettier": "prettier --ignore-path .gitignore .",
    "prettier:check": "npm run prettier -- --check",
    "prettier:write": "npm run prettier -- --write",
    "release": "standard-version",
    "release:dry-run": "standard-version --dry-run",
    "test": "abc",
    "test:coverage": "abc --coverage",
    "test:watch": "abc --watch",
  },
  "standard-version": Object {
    "scripts": Object {
      "postchangelog": "prettier --write CHANGELOG.md",
    },
    "sign": true,
  },
}
`;

exports[`update "package.json" without fields 1`] = `
Object {
  "commitlint": Object {
    "extends": Array [
      "@commitlint/config-conventional",
    ],
    "rules": Object {
      "body-max-line-length": Array [
        1,
        "always",
        100,
      ],
    },
  },
  "eslintConfig": Object {
    "extends": Array [
      "ybiquitous",
    ],
    "ignorePatterns": Array [
      "coverage",
      "dist",
      "tmp",
    ],
    "reportUnusedDisableDirectives": true,
    "root": true,
  },
  "lint-staged": Object {
    "!(*.snap)": "prettier --write",
    "!(CHANGELOG).md": "remark --frail",
    "*.{js,jsx,mjs,ts,tsx}": "eslint --fix",
  },
  "remarkConfig": Object {
    "plugins": Array [
      "remark-preset-ybiquitous",
    ],
  },
  "scripts": Object {
    "clean": "git clean -dx --force --exclude=node_modules --exclude=.husky",
    "format": "npm-run-all --print-label --parallel lint:*:fix prettier:write",
    "lint": "npm-run-all --print-label --parallel lint:* prettier:check",
    "lint:js": "eslint .",
    "lint:js:fix": "npm run lint:js -- --fix",
    "lint:md": "remark . --frail",
    "lint:md:fix": "remark . --output",
    "lint:types": "tsc --noEmit",
    "lint:types:watch": "npm run lint:types -- --watch",
    "prepare": "husky install",
    "prerelease": "git switch main && git pull && npm ci && npm run clean && npm test && npm run lint && npm run clean",
    "prettier": "prettier --ignore-path .gitignore .",
    "prettier:check": "npm run prettier -- --check",
    "prettier:write": "npm run prettier -- --write",
    "release": "standard-version",
    "release:dry-run": "standard-version --dry-run",
    "test": "test",
    "test:coverage": "test --coverage",
    "test:watch": "test --watch",
  },
  "standard-version": Object {
    "scripts": Object {
      "postchangelog": "prettier --write CHANGELOG.md",
    },
    "sign": true,
  },
}
`;

exports[`write ".editorconfig" 1`] = `
"# EditorConfig is awesome: http://EditorConfig.org

root = true

[*]
end_of_line = lf
insert_final_newline = true
trim_trailing_whitespace = true
charset = utf-8
indent_style = space
indent_size = 2
max_line_length = 100

# trailing spaces in markdown indicate word wrap
[*.md]
trim_trailing_spaces = false
"
`;

exports[`write ".github/workflows/commitlint.yml" 1`] = `
"name: commitlint

on:
  push:
    branches: [\\"main\\"]
  pull_request:
    branches: [\\"**\\"]

jobs:
  commitlint:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - uses: wagoid/commitlint-github-action@v3
        with:
          configFile: package.json
"
`;

exports[`write ".github/workflows/npm-audit-fix.yml" 1`] = `
"name: npm audit fix

on:
  schedule:
    - cron: \\"0 0 * * *\\"
  workflow_dispatch:

jobs:
  npm-audit-fix:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v2
      - uses: ybiquitous/npm-audit-fix-action@v3
        with:
          github_token: \${{ secrets.PERSONAL_ACCESS_TOKEN }}
"
`;

exports[`write ".github/workflows/release.yml" 1`] = `
"name: Release

on:
  push:
    tags: [\\"**\\"]

jobs:
  release:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v2
      - uses: actions/setup-node@v2
        with:
          node-version: \\"12\\"
          registry-url: \\"https://registry.npmjs.org\\"
      - run: npm --global install npm@latest
      - run: npm ci
      - run: npm publish
        env:
          NODE_AUTH_TOKEN: \${{ secrets.NPM_TOKEN }}
      - run: echo ::set-output name=tag::\${GITHUB_REF/refs\\\\/tags\\\\//}
        id: get_tag
      - run: gh release create '\${{ steps.get_tag.outputs.tag }}' --notes 'See the [changelog](https://github.com/\${{ github.repository }}/blob/\${{ steps.get_tag.outputs.tag }}/CHANGELOG.md) for more details.'
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
"
`;

exports[`write ".github/workflows/test.yml" 1`] = `
"name: Test

on:
  push:
    branches: [\\"main\\"]
  pull_request:
    branches: [\\"**\\"]

jobs:
  test:
    runs-on: ubuntu-latest
    strategy:
      matrix:
        node-version: [\\"12\\", \\"14\\", \\"16\\"]
    steps:
      - uses: actions/checkout@v2
      - uses: actions/setup-node@v2
        with:
          node-version: \${{ matrix.node-version }}
      - run: npm --global install npm@latest
      - run: npm ci
      - run: npm run lint
      - run: npm test
      - run: npm run release:dry-run
"
`;

exports[`write ".husky/commit-msg" 1`] = `
"#!/bin/sh
. \\"$(dirname \\"$0\\")/_/husky.sh\\"

npx --no-install commitlint --edit \\"$1\\"
"
`;

exports[`write ".husky/post-commit" 1`] = `
"#!/bin/sh
. \\"$(dirname \\"$0\\")/_/husky.sh\\"

npm run release:dry-run
"
`;

exports[`write ".husky/pre-commit" 1`] = `
"#!/bin/sh
. \\"$(dirname \\"$0\\")/_/husky.sh\\"

npx --no-install lint-staged
"
`;

exports[`write ".remarkignore" 1`] = `
"CHANGELOG.md
"
`;
